# wagon

./: .gitignore  .travis.yml  Cargo.toml  README.md  up.sql
config/: default.toml
migrations/2020-10-30-180123_Subscribers/: down.sql  up.sql
migrations/2020-10-31-055946_Organisations/: down.sql  up.sql
migrations/2020-10-31-061503_Lists/: down.sql  up.sql
src/: errors.rs  handlers.rs  main.rs  routes.rs  schema.rs  settings.rs
src/database/: mod.rs  models.rs  pool.rs
src/database/actions/: register_org.rs
src/database/actions/organisations/: mod.rs
src/database/models/: lists.rs  mod.rs  organisations.rs  subscribers.rs
src/database/src/: schema.rs
src/handlers/: auth.rs  mod.rs  verify.rs
src/organisations/: handlers.rs  mod.rs  models.rs  routes.rs
src/organisations/actions/: mod.rs  register.sql  register_org.rs
src/organisations/lists/: lists.rs
src/organisations/payload/: login.rs  mod.rs  register.rs
src/organisations/utils/: hashify.rs  mod.rs
src/organisations/utils/filters/: mod.rs
src/organisations/utils/filters/blacklist/: enforce.rs  mod.rs
src/organisations/utils/filters/profainity/: enforce.rs  tables.rs
src/organisations/utils/filters/user_case_mapped/: enforce.rs  mod.rs  tables.rs
src/payload/: email.rs  mod.rs  smtp_payload.rs
src/payload/organisation/: creds.rs  login.rs  mod.rs  register.rs
src/src/: schema.rs
src/subscribers/: mod.rs
src/utils/: send_email.rs
src/utils/create_organisation/: create_organisation.rs  hashify.rs  mod.rs
src/utils/filters/blacklist/: enforce.rs  tables.rs
src/utils/filters/profainity/: enforce.rs  mod.rs
src/utils/filters/user_case_mapped/: enforce.rs
src/verification/: handlers.rs  mod.rs  payload.rs  routes.rs  utils.rs
src/verification/assets/: confirmation-email.html
